Adding team contact and updating logo

--- a/HunterWolves/Pages/Contact.cshtml
+++ b/HunterWolves/Pages/Contact.cshtml
@@ -7,14 +7,26 @@
 
 <p>Use this page with contact information about Hunter Wolves.</p>
 
-<form action="./Thanks">
-  <label for="fname">First Name:</label><br>
-  <input type="text" id="fname" name="fname" value="John"><br>
-  <label for="lname">Last Name:</label><br>
-  <input type="text" id="lname" name="lname" value="Doe"><br><br>
-  <label for="phone">Phone Number:</label><br>
-  <input type="text" id="phone" name="phone" value="###-###-####"><br><br>
-  <label for="email">Email:</label><br>
-  <input type="text" id="email" name="email" value="user@place.com"><br><br>
-  <input type="submit" value="Submit">
-</form> 
+<div>
+    <h4>Meet the Team:</h4>
+    <div>Sarah Sebestyen</div>
+    <div>Carrie Driscoll</div>
+    <div>Brandon North</div>
+    <div>Muhammet Barut</div>
+    <div>Michael Gribbins</div>
+</div>
+
+<div>
+    <h3>Contact Us:</h3>
+    <form action="./Thanks">
+      <label for="fname">First Name:</label><br>
+      <input type="text" id="fname" name="fname" value="John"><br>
+      <label for="lname">Last Name:</label><br>
+      <input type="text" id="lname" name="lname" value="Doe"><br><br>
+      <label for="phone">Phone Number:</label><br>
+      <input type="text" id="phone" name="phone" value="###-###-####"><br><br>
+      <label for="email">Email:</label><br>
+      <input type="text" id="email" name="email" value="user@place.com"><br><br>
+      <input type="submit" value="Submit">
+    </form> 
+</div>
