--- a/HunterWolves/Pages/Index.cshtml
+++ b/HunterWolves/Pages/Index.cshtml
@@ -21,6 +21,10 @@
             <p>Wolves can thrive in a diversity of habitats from the tundra to woodlands, forests, grasslands and deserts. Wolves are carnivores—they prefer to eat large hoofed mammals such as deer, elk, bison, and moose. They also hunt smaller mammals such as beavers, rodents, and hares.</p>
         </div>
     </div>
+    <div>
+        <h3>How Wolves Communicate</h3>
+        <span>Wolves use their sense of smell to communicate through chemical messages. These chemical messages between members of the same species are known as pheromones.  Sources of pheromones in wolves include glands on the toes, tail, eyes, anus, genitalia and skin.</span>
+    </div>
     <div class="reproductive">
         <h3>Wolf Reproduction Facts:</h3>
         <p>Who reproduces in a wolf pack?
