Refining section breaks

--- a/HunterWolves/Pages/Gallery.cshtml
+++ b/HunterWolves/Pages/Gallery.cshtml
@@ -8,6 +8,7 @@
 <p>This is a page with images for wolves.</p>
 
 <div>
+    <h3>Wolves in Nature:</h3>
     <img src="./images/gall001.jpg" />
     <img src="./images/gall002.jpg" />
     <img src="./images/gall003.jpg" />
@@ -15,6 +16,7 @@
 </div>
 
 <div>
+    <h3>Wolf Family:</h3>
     <img src="./images/family001.jpg" />
     <img src="./images/cute001.jpg" />
     <img src="./images/cute002.jpg" />
