--- a/HunterWolves/Pages/Index.cshtml
+++ b/HunterWolves/Pages/Index.cshtml
@@ -27,8 +27,7 @@
     </div>
     <div class="reproductive">
         <h3>Wolf Reproduction Facts:</h3>
-        <p>Who reproduces in a wolf pack?
-Usually only the dominant pair breeds, however in areas where there is a high ratio of prey per wolf, such as in Yellowstone National Park, there can be multiple litters per pack.</p>
+        <p>Who reproduces in a wolf pack?  Usually only the dominant pair breeds, however in areas where there is a high ratio of prey per wolf, such as in Yellowstone National Park, there can be multiple litters per pack.</p>
     </div>  
     <div class="culture">
         <h3>Wolves in Popular Culture:</h3>
