--- a/HunterWolves/Pages/Thanks.cshtml
+++ b/HunterWolves/Pages/Thanks.cshtml
@@ -5,6 +5,6 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Thank you for your support. We will give you a howl.</p>
+<p>Thank you for your interest and support. We will give you a howl.</p>
 
 <img src="./images/howl001.jpg" />
