--- a/HunterWolves/Pages/Contact.cshtml
+++ b/HunterWolves/Pages/Contact.cshtml
@@ -8,7 +8,7 @@
 <p>Use this page with contact information about Hunter Wolves.</p>
 
 <div>
-    <h4>Meet the Team:</h4>
+    <h3>Meet the Team:</h3>
     <div>Sarah Sebestyen</div>
     <div>Carrie Driscoll</div>
     <div>Brandon North</div>
@@ -22,9 +22,9 @@
       <label for="fname">First Name:</label><br>
       <input type="text" id="fname" name="fname" value="John"><br>
       <label for="lname">Last Name:</label><br>
-      <input type="text" id="lname" name="lname" value="Doe"><br><br>
+      <input type="text" id="lname" name="lname" value="Doe"><br>
       <label for="phone">Phone Number:</label><br>
-      <input type="text" id="phone" name="phone" value="###-###-####"><br><br>
+      <input type="text" id="phone" name="phone" value="###-###-####"><br>
       <label for="email">Email:</label><br>
       <input type="text" id="email" name="email" value="user@place.com"><br><br>
       <input type="submit" value="Submit">
