Adding some culture reference examples nad padding for footer navigation

--- a/HunterWolves/Pages/Index.cshtml
+++ b/HunterWolves/Pages/Index.cshtml
@@ -31,8 +31,25 @@
     </div>  
     <div class="culture">
         <h3>Wolves in Popular Culture:</h3>
-        <img src="./images/movie001.jpg">
-        <p>Wolves have been featured in books, fairy tales, cartoons, and movies </p>
+        <p>Wolves have been featured in books, fairy tales, cartoons, and movies.  They have filled the role of hero, villian, and symbols for generations.</p>
+        <div class="culture-row" style="display: flex;">
+            <div>
+                <img src="./images/movie001.jpg" style="max-width: 80%; max-height: 80%;">
+                <span style="display: block;">Balto</span>
+            </div>
+            <div>
+                <img src="./images/bigbad01.jpg" style="max-width: 80%; max-height: 80%;"/>
+                <span style="display: block;">Little Red Riding Hood</span>
+            </div>
+            <div>
+                <img src="./images/bigbad02.jpg" style="max-width: 80%; max-height: 80%;"/>
+                <span style="display: block;">Big Bad Wolf</span>
+            </div>
+            <div>
+                <img src="./images/spirit001.jpg" style="max-width: 80%; max-height: 80%;"/>
+                <span style="display: block;">Spirit Guide</span>
+            </div>
+        </div>
     </div>
 </div>
 
