--- a/HunterWolves/Pages/Shared/_Layout.cshtml
+++ b/HunterWolves/Pages/Shared/_Layout.cshtml
@@ -43,10 +43,29 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted" style="background-color: white">
+    <br /><br />
+
+    <footer class="border-top footer text-muted" style="background-color: white; line-height: 20px;">
         <div class="container">
-            &copy; 2023 - HunterWolves - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2023 - HunterWolves
         </div>
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+            <div class="container">
+                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                    <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Gallery">Gallery</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Contact">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
