Adding some header and contact info

--- a/HunterWolves/Pages/Contact.cshtml
+++ b/HunterWolves/Pages/Contact.cshtml
@@ -13,6 +13,7 @@
     <div>Carrie Driscoll</div>
     <div>Brandon North</div>
     <div>Muhammet Barut</div>
+    <div>Lee Rohrer</div>
     <div>Michael Gribbins</div>
 </div>
 
