--- a/HunterWolves/Pages/Index.cshtml
+++ b/HunterWolves/Pages/Index.cshtml
@@ -21,14 +21,18 @@
             <p>Wolves can thrive in a diversity of habitats from the tundra to woodlands, forests, grasslands and deserts. Wolves are carnivores—they prefer to eat large hoofed mammals such as deer, elk, bison, and moose. They also hunt smaller mammals such as beavers, rodents, and hares.</p>
         </div>
     </div>
-    <div>
-        <h3>How Wolves Communicate</h3>
+    <div class="communication">
+        <h3>How Wolves Communicate:</h3>
         <span>Wolves use their sense of smell to communicate through chemical messages. These chemical messages between members of the same species are known as pheromones.  Sources of pheromones in wolves include glands on the toes, tail, eyes, anus, genitalia and skin.</span>
     </div>
     <div class="reproductive">
         <h3>Wolf Reproduction Facts:</h3>
         <p>Who reproduces in a wolf pack?  Usually only the dominant pair breeds, however in areas where there is a high ratio of prey per wolf, such as in Yellowstone National Park, there can be multiple litters per pack.</p>
-    </div>  
+    </div>
+    <div class="organization">
+        <h3>Wolf Hierarchy:</h3>
+        <p>Wolfs live in a pack structure. This pack is lead by an Alpha male who leads the overall pack. The other members coordinate with one another.  Opposite to the Alpha, is the Scapegoat, an individual that is at the bottom of the hierarchy and tends to be ostracized.</p>
+    </div>   
     <div class="culture">
         <h3>Wolves in Popular Culture:</h3>
         <p>Wolves have been featured in books, fairy tales, cartoons, and movies.  They have filled the role of hero, villian, and symbols for generations.</p>
