--- a/HunterWolves/Pages/Shared/_Layout.cshtml
+++ b/HunterWolves/Pages/Shared/_Layout.cshtml
@@ -12,12 +12,11 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <img src="./images/wolf-logo.png" style="width:60px; margin-right:10px;">
-                @*<a class="navbar-brand" asp-area="" asp-page="/Index">HunterWolves</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index"><img src="./images/wolf-logo.png" style="width:60px; margin-right:10px;"> HunterWolves</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>*@
+                    <img src="./images/wolf-logo.png" style="width:60px; margin-right:10px;">
+                </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
