--- a/HunterWolves/Pages/Contact.cshtml
+++ b/HunterWolves/Pages/Contact.cshtml
@@ -8,15 +8,11 @@
 <p>Use this page with contact information about Hunter Wolves.</p>
 
 <div>
-    <h3>Meet the Team:</h3>
-    <div>Sarah Sebestyen</div>
-    <div>Carrie Driscoll</div>
-    <div>Brandon North</div>
+    <h3>Site Owner:</h3>
     <div>Muhammet Barut</div>
-    <div>Lee Rohrer</div>
-    <div>Michael Gribbins</div>
+    <div>Email: mbarut@hunter.com</div>
 </div>
-
+<br />
 <div>
     <h3>Contact Us:</h3>
     <form action="./Thanks">
