--- a/HunterWolves/Pages/Index.cshtml
+++ b/HunterWolves/Pages/Index.cshtml
@@ -4,8 +4,9 @@
     ViewData["Title"] = "Home page";
 }
 
+ <div style="background-image: url(https://i.guim.co.uk/img/media/8f02bb49224d9a94699b75213664bf898617c062/0_353_5315_3190/master/5315.jpg?width=1200&height=1200&quality=85&auto=format&fit=crop&s=c812148bc6ffc9517558901b73d9a626);height: 450px; width: 100%; background-size: cover; background-position: center; display: flex; align-items: center; color: white; font-family: Arial, Helvetica, sans-serif; font-size: 20px;">        <h1>            Welcome to HunterWolves        </h1> </div>
+
 <div class="text-center">
-    <h1 class="display-4">Welcome to Hunter Wolves</h1>
     <p>A place to educate the public about wolves and clear up misconseptions about them.</p>
 </div>
 
